Productionize this mess, v1 (#1)
* add proper maven structure

* clean up so the thing runs again

* dockerise, callbacks, etc

* trigger ci

* basic credential loading from encr s3 bucket

* static org signatures and attempt to add signature appearance

* [WIP] start adding concurrency to the system

* Added eclipse ignore entries to ~/.gitignore

* Made SqsMessageProducer.prepareArgs() public

* Added ModuleTest

* Disables *.pdf from /.gitignore

* Added test resource:

- Reference_Guide-All-in-Signing-Service-en.pdf

* Added DateJsonDeserializer

* Added DateJsonSerializer

* Added FileReferenceJsonDeserializer

* Added FileReferenceJsonSerializer

* Added Messages

* Added SignatureResponse

* Added SignatureResultPollRequest

* Added MessagesTest

* Remove result PDF before running in ModuleTest

* Updated SignatureRequest

- Added fromJson(String)
- Added toString()
- Added field fileReferenceSigned
- Sanitized code

* Updated SignatureResponse:

- Added signatureAppearance

* Updated SignatureResultPollRequest:

- Added signatureAppearance

* Updated MessagesTest:

- Added support for fileReferenceSigned

* Updated ModuleTest:

- Added support for fileReferenceSigned

* Updated TestSign:

- Added fileReferenceSigned

* Updated SignatureRequest:

- Added fromJson(byte[])
- Added fileReferenceSigned

* Updated SqsMessageProducer:

- Code clean up
- Updated -outfile option
- Replaced WorkQueue with Worker

* Added Worker

* Replaced WorkQueue with Worker

* Updated .gitignore:

- Added /_mycert.crt
- Added /_mycert.key

* Changed dependency from jutils to tor for Teebly DB envs

* Updated PDF:

- Replaced WorkQueue with Worker

* Added Worker functionality to SignPDF

* Replaced WorkQueue with Worker in Soap

* Removed WorkQueue from WebServer

* Added TestContext

* Updated ModuleTest

* Added throws IOException to TestSign.test_org_signature()

* Updat

--- a/.gitignore
+++ b/.gitignore
@@ -16,7 +16,7 @@ Thumbs.db
 ###################
 *~
 *.kjs
-*.pdf
+#*.pdf
 *.p12
 *.p7s
 run.sh
@@ -29,3 +29,10 @@ mycert-preprod*
 .idea/*
 *.iml
 
+/.classpath
+/.project
+/.settings
+/bin
+/target
+/_mycert.crt
+/_mycert.key
