--- a/src/main/resources/signpdf.properties
+++ b/src/main/resources/signpdf.properties
@@ -10,14 +10,14 @@ KEY_ONDEMAND=OnDemand-Advanced
 # (The path is relative unless full path is specified)
 ##########################################################
 # SSL Public Certificate file to access the AIS service
-CERT_FILE=/Users/miro/projects/teebly/AIS/shell/mycert.crt
+CERT_FILE=_mycert.crt
 
 # SSL Private Key file to access the AIS service
 # WARNING: Be sure to protect this file from unauthorized access!
-CERT_KEY=/Users/miro/projects/teebly/AIS/shell/mycert.key
+CERT_KEY=_mycert.key
 
 # Root CA Certificate bag file to validate the certificates
-SSL_CA=/Users/miro/projects/teebly/AIS/shell/ais-ca-ssl.crt
+SSL_CA=ais-ca-ssl.crt
 
 ##########################################################
 # Connection configuration
@@ -40,7 +40,7 @@ DIGEST_METHOD=SHA256
 # (It's recommended to increase these values if using PwdOTP as step-up method)
 ##########################################################
 # Polling interval for asynchronous requests in milliseconds (default is 1000)
-POLLING_INTERVAL=18000
+POLLING_INTERVAL=3000
 
 # Maximum number of retries for asynchronous requests (default is 10)
-POLL_RETRIES=10
+POLL_RETRIES=100
